add metodo de busca paginada dos itens de cardapio considerando o novo tipo de arquitetura e refatoracao de outros metodos